# innoday-python-pdf-tool

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  scratchpad.py
commands/: compress.py  merge.py  remove_images.py  search.py  split.py
commands/search/: search.py
encrypt/: encrypt.py
pdftool/: __main__.py  encryption.py  main.py  merge.py  rotate.py  search.py
pdftool/search/: search.py
search/: search.py
tests/: test_ranges.py  test_search.py
tests/search/: test_search.py
