[tool.poetry]
name = "pdftool"
version = "0.1.0"
description = ""
authors = ["David Welman <dwelman@xebia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pycryptodome = "^3.17"
pypdf = "^3.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
pdftool = "pdftool.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
